# django-draftjs-editor

./: .coveragerc  .editorconfig  .gitignore  MANIFEST.in  README.rst  package.json  setup.cfg  setup.py
draftjs_editor/: fields.py
draftjs_editor/forms/: __init__.py  fields.py  widgets.py
draftjs_editor/static/draftjs_editor/: Draft.js  draftjs_editor.css
draftjs_editor/static/draftjs_editor/js/: EditorWidget.js  StyleButton.js  StyleControls.js
draftjs_editor/templates/draftjs_editor/widgets/: editor.html
draftjs_editor/test/: test_cases.py
requirements/: all.txt  install.txt  setup.txt
tests/: settings.py  test_fields.py  test_forms.py
tests/snapshots/: editor.html
