[metadata]
name = django-draftjs-editor
version = 0.1.0
description = Django extensions for Draft.js rich text editor
license = BSD
long_description = file:README.rst

[options]
include_package_data = True
packages = find:
install_requires =
  Django>=2.0

[tox]
skipsdist = True
envlist = flake8,py36
requires =
  flake8==3.5.0
  pydocstyle==3.0.0
  flake8-docstrings>=0.2.7
  flake8-per-file-ignores==0.6
  pep8-naming==0.7.0
  flake8-colors==0.1.6
  pygments==2.4.2

[flake8]
exclude = .tox
ignore = D100, D104, D105, D106
