[metadata]
name = django-draftjs-editor
description = Django extensions for Draft.js rich text editor
license = BSD
long_description = file:README.rst

[options]
include_package_data = True
packages = find:

[aliases]
test = pytest

[tool:pytest]
addopts=--ds=tests.settings -rA --cov=draftjs_editor
